--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
+    "dotenv": "^16.4.5",
     "jest": "^29.5.0",
     "nodemon": "^3.1.4",
     "prettier": "^3.0.0",
