--- a/package.json
+++ b/package.json
@@ -47,10 +47,11 @@
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^7.0.0",
     "@typescript-eslint/parser": "^7.0.0",
+    "dotenv": "^16.4.5",
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
-    "dotenv": "^16.4.5",
+    "inversify": "^6.0.2",
     "jest": "^29.5.0",
     "nodemon": "^3.1.4",
     "prettier": "^3.0.0",
